--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <title>My first Lab</title>
     <body>
         <h1>Hello World, I am 2575355</h1>
+        <a href="2575355-lab2.html">Lab 2</a>
     </body>
 </html>
